--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: csharp
 mono: none
-dotnet:3.0
-solution: ACC.sln
-script:
-  - dotnet restore
-  - dotnet build
+dotnet: 3.0.0
 
+install:
+- dotnet restore
+
+script:
+ - dotnet build
