--- a/src/messaging/rabbitMq/ACC.Messaging.RabbitMq.csproj
+++ b/src/messaging/rabbitMq/ACC.Messaging.RabbitMq.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
     <PackageReference Include="RawRabbit" Version="2.0.0-rc5" />
