--- a/src/persistence/mongo/ACC.Persistence.Mongo.csproj
+++ b/src/persistence/mongo/ACC.Persistence.Mongo.csproj
@@ -7,12 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="3.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.9.2" />
   </ItemGroup>
-
 
   <ItemGroup>
     <ProjectReference Include="..\..\common\ACC.Common.csproj" />
   </ItemGroup>
-
 </Project>
