--- a/src/services/connectivity/ACC.Services.VehicleConnectivity.csproj
+++ b/src/services/connectivity/ACC.Services.VehicleConnectivity.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <UserSecretsId>0053afc3-9695-4e3b-9eda-f58167449960</UserSecretsId>
+    <UserSecretsId>01c80543-6bee-473a-8fad-5262d46a7fd9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
   </PropertyGroup>
@@ -16,5 +16,4 @@
     <ProjectReference Include="..\..\messaging\rabbitMq\ACC.Messaging.RabbitMq.csproj" />
     <ProjectReference Include="..\..\persistence\mongo\ACC.Persistence.Mongo.csproj" />
   </ItemGroup>
-
 </Project>
