--- a/src/services/customers/appsettings.json
+++ b/src/services/customers/appsettings.json
@@ -6,5 +6,35 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "mongo": {
+    "connectionString": "mongodb://localhost:27017",
+    "database": "services-customers",
+    "seed": true
+  },
+  "rabbitmq": {
+    "Namespace": "customers",
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "Port": 5672,
+    "Hostnames": [ "localhost" ],
+    "RequestTimeout": "00:00:10",
+    "PublishConfirmTimeout": "00:00:01",
+    "RecoveryInterval": "00:00:10",
+    "PersistentDeliveryMode": true,
+    "AutoCloseConnection": true,
+    "AutomaticRecovery": true,
+    "TopologyRecovery": true,
+    "Exchange": {
+      "Durable": true,
+      "AutoDelete": true,
+      "Type": "Topic"
+    },
+    "Queue": {
+      "AutoDelete": true,
+      "Durable": true,
+      "Exclusive": true
+    }
+  },
   "AllowedHosts": "*"
 }
