--- a/src/services/vehicles/ACC.Services.Vehicles.csproj
+++ b/src/services/vehicles/ACC.Services.Vehicles.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
@@ -16,5 +16,4 @@
     <ProjectReference Include="..\..\messaging\rabbitMq\ACC.Messaging.RabbitMq.csproj" />
     <ProjectReference Include="..\..\persistence\mongo\ACC.Persistence.Mongo.csproj" />
   </ItemGroup>
-
 </Project>
