added ping simulation

--- a/src/services/tracking/appsettings.json
+++ b/src/services/tracking/appsettings.json
@@ -36,6 +36,10 @@
       "Exclusive": true
     }
   },
+  "trackingSettings": {
+    "pingTimeout": 2000,
+    "pingTimeFrame": 60000
+  },
   "customers-service-url": "",
   "vehicles-service-url": "",
   "AllowedHosts": "*"
