added gateway api

--- a/src/gateway/appsettings.json
+++ b/src/gateway/appsettings.json
@@ -8,11 +8,11 @@
   },
   "mongo": {
     "connectionString": "mongodb://localhost:27017",
-    "database": "services-vehicles",
+    "database": "services-tracking",
     "seed": true
   },
   "rabbitmq": {
-    "Namespace": "vehicles",
+    "Namespace": "gateway",
     "Username": "guest",
     "Password": "guest",
     "VirtualHost": "/",
@@ -36,6 +36,12 @@
       "Exclusive": true
     }
   },
-  "customerServiceUrl": "",
+  "trackingSettings": {
+    "pingTimeout": 2000,
+    "pingTimeFrame": 60000
+  },
+  "customersServiceUrl": "",
+  "vehiclesServiceUrl": "",
+  "trackingServiceUrl": "",
   "AllowedHosts": "*"
 }
