--- a/src/services/tracking/appsettings.json
+++ b/src/services/tracking/appsettings.json
@@ -40,7 +40,7 @@
     "pingTimeout": 2000,
     "pingTimeFrame": 60000
   },
-  "customers-service-url": "",
-  "vehicles-service-url": "",
+  "customersServiceUrl": "",
+  "vehiclesServiceUrl": "",
   "AllowedHosts": "*"
 }
