--- a/src/gateway/appsettings.json
+++ b/src/gateway/appsettings.json
@@ -40,8 +40,8 @@
     "pingTimeout": 2000,
     "pingTimeFrame": 60000
   },
-  "customersServiceUrl": "",
-  "vehiclesServiceUrl": "",
-  "trackingServiceUrl": "",
+  "customerServiceUrl": "http://localhost:50759",
+  "vehiclesServiceUrl": "http://localhost:50784",
+  "trackingServiceUrl": "http://localhost:55820",
   "AllowedHosts": "*"
 }
