--- a/src/services/customers/ACC.Services.Customers.csproj
+++ b/src/services/customers/ACC.Services.Customers.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>cd35e8e3-ea96-4a95-bc15-311c6d54301f</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
