--- a/src/services/tracking/appsettings.json
+++ b/src/services/tracking/appsettings.json
@@ -40,7 +40,7 @@
     "pingTimeout": 2000,
     "pingTimeFrame": 60000
   },
-  "customersServiceUrl": "",
-  "vehiclesServiceUrl": "",
+  "customersServiceUrl": "http://localhost:50759",
+  "vehiclesServiceUrl": "http://localhost:50784",
   "AllowedHosts": "*"
 }
