--- a/src/services/vehicles/ACC.Services.Vehicles.csproj
+++ b/src/services/vehicles/ACC.Services.Vehicles.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>0053afc3-9695-4e3b-9eda-f58167449960</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
