--- a/src/services/vehicles/appsettings.json
+++ b/src/services/vehicles/appsettings.json
@@ -7,9 +7,9 @@
     }
   },
   "mongo": {
-    "connectionString": "mongodb://localhost:27017",
-    "database": "services-vehicles",
-    "seed": true
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "services-vehicles",
+    "Seed": true
   },
   "rabbitmq": {
     "Namespace": "vehicles",
@@ -36,6 +36,6 @@
       "Exclusive": true
     }
   },
-  "customerServiceUrl": "",
+  "customersServiceUrl": "http://localhost:50759",
   "AllowedHosts": "*"
 }
