--- a/src/gateway/appsettings.docker.json
+++ b/src/gateway/appsettings.docker.json
@@ -1,18 +1,24 @@
-{
+﻿{
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
   "mongo": {
     "connectionString": "mongodb://mongo:27017",
-    "database": "services-customers",
+    "database": "services-tracking",
     "seed": true
   },
   "rabbitmq": {
-    "Namespace": "customers",
+    "Namespace": "tracking",
     "Username": "guest",
     "Password": "guest",
     "VirtualHost": "/",
@@ -34,7 +40,10 @@
       "AutoDelete": true,
       "Durable": true,
       "Exclusive": true
-    }
-  },
-  "AllowedHosts": "*"
+    },
+    "trackingServiceUrl": "http://acc.services.tracking:80",
+    "customersServiceUrl": "http://acc.services.customers:80",
+    "vehiclesServiceUrl": "http://acc.services.vehicles:80",
+    "AllowedHosts": "*"
+  }
 }
