--- a/src/gateway/appsettings.json
+++ b/src/gateway/appsettings.json
@@ -17,7 +17,7 @@
     "Password": "guest",
     "VirtualHost": "/",
     "Port": 5672,
-    "Hostnames": [ "localhost" ],
+    "Hostnames": [ "rabbitmq" ],
     "RequestTimeout": "00:00:10",
     "PublishConfirmTimeout": "00:00:01",
     "RecoveryInterval": "00:00:10",
@@ -36,11 +36,7 @@
       "Exclusive": true
     }
   },
-  "trackingSettings": {
-    "pingTimeout": 2000,
-    "pingTimeFrame": 60000
-  },
-  "customerServiceUrl": "http://localhost:50759",
+  "customersServiceUrl": "http://localhost:50759",
   "vehiclesServiceUrl": "http://localhost:50784",
   "trackingServiceUrl": "http://localhost:55820",
   "AllowedHosts": "*"
