--- a/src/services/tracking/appsettings.json
+++ b/src/services/tracking/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "mongo": {
-    "connectionString": "mongodb://localhost:27017",
+    "connectionString": "mongodb://mongo:27017",
     "database": "services-tracking",
     "seed": true
   },
@@ -17,7 +17,7 @@
     "Password": "guest",
     "VirtualHost": "/",
     "Port": 5672,
-    "Hostnames": [ "localhost" ],
+    "Hostnames": [ "rabbitmq" ],
     "RequestTimeout": "00:00:10",
     "PublishConfirmTimeout": "00:00:01",
     "RecoveryInterval": "00:00:10",
