--- a/src/services/customers/appsettings.docker.json
+++ b/src/services/customers/appsettings.docker.json
@@ -1,9 +1,15 @@
-{
+﻿{
   "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "IncludeScopes": false,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
   "mongo": {
@@ -11,8 +17,8 @@
     "database": "services-customers",
     "seed": true
   },
-  "rabbitmq": {
-    "Namespace": "customers",
+  "rabbitmq" : {
+    "Namespace":"customers",
     "Username": "guest",
     "Password": "guest",
     "VirtualHost": "/",
@@ -26,15 +32,14 @@
     "AutomaticRecovery": true,
     "TopologyRecovery": true,
     "Exchange": {
-      "Durable": true,
-      "AutoDelete": true,
-      "Type": "Topic"
+        "Durable": true,
+        "AutoDelete": true,
+        "Type": "Topic"
     },
     "Queue": {
-      "AutoDelete": true,
-      "Durable": true,
-      "Exclusive": true
+        "AutoDelete": true,
+        "Durable": true,
+        "Exclusive": true
     }
-  },
-  "AllowedHosts": "*"
+ }
 }
