--- a/src/services/vehicles/Dockerfile
+++ b/src/services/vehicles/Dockerfile
@@ -20,4 +20,5 @@ RUN dotnet publish "ACC.Services.Vehicles.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+ENV ASPNETCORE_ENVIRONMENT docker
 ENTRYPOINT ["dotnet", "ACC.Services.Vehicles.dll"]
