--- a/src/gateway/appsettings.json
+++ b/src/gateway/appsettings.json
@@ -36,8 +36,8 @@
       "Exclusive": true
     }
   },
-  "customersServiceUrl": "http://localhost:50759",
-  "vehiclesServiceUrl": "http://localhost:50784",
-  "trackingServiceUrl": "http://localhost:55820",
+  "trackingServiceUrl": "http://acc.services.tracking:80",
+  "customersServiceUrl": "http://acc.services.customers:80",
+  "vehiclesServiceUrl": "http://acc.services.vehicles:80",
   "AllowedHosts": "*"
 }
