--- a/src/services/vehicles/appsettings.Development.json
+++ b/src/services/vehicles/appsettings.Development.json
@@ -1,9 +1,42 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "mongo": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "services-vehicles",
+    "Seed": true
+  },
+  "rabbitmq": {
+    "Namespace": "vehicles",
+    "Username": "guest",
+    "Password": "guest",
+    "VirtualHost": "/",
+    "Port": 5672,
+    "Hostnames": [ "rabbitmq" ],
+    "RequestTimeout": "00:00:10",
+    "PublishConfirmTimeout": "00:00:01",
+    "RecoveryInterval": "00:00:10",
+    "PersistentDeliveryMode": true,
+    "AutoCloseConnection": true,
+    "AutomaticRecovery": true,
+    "TopologyRecovery": true,
+    "Exchange": {
+      "Durable": true,
+      "AutoDelete": true,
+      "Type": "Topic"
+    },
+    "Queue": {
+      "AutoDelete": true,
+      "Durable": true,
+      "Exclusive": true
+    }
+  },
+  //"customersServiceUrl": "http://localhost:5000",
+  "customersServiceUrl": "http://acc.services.customers:80",
+  "AllowedHosts": "*"
 }
