--- a/src/gateway/Dockerfile
+++ b/src/gateway/Dockerfile
@@ -1,7 +1,7 @@
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.0-buster-slim AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 443
+#EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
@@ -17,5 +17,5 @@ RUN dotnet publish "ACC.ApiGateway.csproj" -c Release -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENV ASPNETCORE_ENVIRONMENT docker
-ENTRYPOINT ["dotnet", "ACC.ApiGateway.dll"]
+#ENV ASPNETCORE_ENVIRONMENT Docker
+ENTRYPOINT ["dotnet", "ACC.ApiGateway.dll","--environment=Docker"]
