--- a/src/services/customers/Properties/launchSettings.json
+++ b/src/services/customers/Properties/launchSettings.json
@@ -20,7 +20,7 @@
     "ACC.Services.Customers": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
@@ -31,10 +31,11 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
-        "ASPNETCORE_URLS": "https://+:443;http://+:80",
-        "ASPNETCORE_HTTPS_PORT": "44338"
+        "ASPNETCORE_URLS": "http://+:80",
+        "ASPNETCORE_HTTPS_PORT": "44338",
+        "ASPNETCORE_ENVIRONMENT": "Docker"
       },
-      "httpPort": 50751,
+      "httpPort": 5000,
       "useSSL": true,
       "sslPort": 44338
     }
