--- a/src/ui/spa/Properties/launchSettings.json
+++ b/src/ui/spa/Properties/launchSettings.json
@@ -28,11 +28,11 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
-        "ASPNETCORE_URLS": "https://+:443;http://+:80",
+        "ASPNETCORE_URLS": "http://+:80",
         "ASPNETCORE_HTTPS_PORT": "44351"
       },
-      "httpPort": 52478,
-      "useSSL": true,
+      "httpPort": 5008,
+      "useSSL": false,
       "sslPort": 44351
     }
   }
