--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,6 +77,8 @@ services:
       - '/app/node_modules'
     environment:
       - ASPNETCORE_ENVIRONMENT=Docker
+    depends_on:
+    - acc.gateway.api
     ports:
       - '5008:80'
       #- '44351:443'
