fixed broken tests

--- a/src/ui/spa/Properties/launchSettings.json
+++ b/src/ui/spa/Properties/launchSettings.json
@@ -28,8 +28,7 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "environmentVariables": {
-        "ASPNETCORE_URLS": "http://+:80",
-        "ASPNETCORE_HTTPS_PORT": "44351"
+        "ASPNETCORE_URLS": "http://+:80"
       },
       "httpPort": 5008,
       "useSSL": false,
