cleaned up code

--- a/src/gateway/Dockerfile
+++ b/src/gateway/Dockerfile
@@ -18,4 +18,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 #ENV ASPNETCORE_ENVIRONMENT Docker
-ENTRYPOINT ["dotnet", "ACC.ApiGateway.dll","--environment=Docker"]
+ENTRYPOINT ["dotnet", "ACC.ApiGateway.dll"]
