--- a/src/gateway/appsettings.Development.json
+++ b/src/gateway/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "mongo": {
-    "connectionString": "mongodb://localhost:27017",
+    "connectionString": "mongodb://mongo:27017",
     "database": "services-tracking",
     "seed": true
   },
