--- a/src/services/customers/Dockerfile
+++ b/src/services/customers/Dockerfile
@@ -21,4 +21,4 @@ FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
 #ENV ASPNETCORE_ENVIRONMENT Docker
-ENTRYPOINT ["dotnet", "ACC.Services.Customers.dll","--environment=Docker"]
+ENTRYPOINT ["dotnet", "ACC.Services.Customers.dll"]
