--- a/src/services/tracking/appsettings.json
+++ b/src/services/tracking/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "mongo": {
-    "connectionString": "mongodb://localhost:27017",
+    "connectionString": "mongodb://mongo:27017",
     "database": "services-tracking",
     "seed": true
   },
@@ -40,7 +40,7 @@
     "pingTimeout": 2000,
     "pingTimeFrame": 60000
   },
-  "customersServiceUrl": "http://localhost:5000",
-  "vehiclesServiceUrl": "http://localhost:5002",
+  "customersServiceUrl": "http://acc.services.customers:80",
+  "vehiclesServiceUrl": "http://acc.services.vehicles:80",
   "AllowedHosts": "*"
 }
