--- a/src/services/vehicles/appsettings.Development.json
+++ b/src/services/vehicles/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://mongo:27017",
     "Database": "services-vehicles",
     "Seed": true
   },
@@ -36,7 +36,7 @@
       "Exclusive": true
     }
   },
-  //"customersServiceUrl": "http://localhost:5000",
+  //"customersServiceUrl": "http://0.0.0.0:5000",
   "customersServiceUrl": "http://acc.services.customers:80",
   "AllowedHosts": "*"
 }
