--- a/src/services/vehicles/appsettings.json
+++ b/src/services/vehicles/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "mongo": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://0.0.0.0:27017",
     "Database": "services-vehicles",
     "Seed": true
   },
@@ -36,6 +36,6 @@
       "Exclusive": true
     }
   },
-  "customersServiceUrl": "http://localhost:5000",
+  "customersServiceUrl": "http://acc.services.customers:80",
   "AllowedHosts": "*"
 }
